_build/_log
### Starting build.
# Target: card.mli.depends, tags: { package(ANSITerminal), package(Yojson), package(oUnit), extension:mli, file:card.mli, ocaml, ocamldep, quiet, traverse }
/Users/anshgodha/.opam/4.09.0/bin/ocamldep.opt -modules card.mli > card.mli.depends # cached
# Target: card.cmi, tags: { package(ANSITerminal), package(Yojson), package(oUnit), byte, compile, extension:mli, file:card.mli, interf, ocaml, quiet, traverse }
/Users/anshgodha/.opam/4.09.0/bin/ocamlc.opt -c -o card.cmi card.mli # cached
# Target: card.ml.depends, tags: { package(ANSITerminal), package(Yojson), package(oUnit), extension:ml, file:card.ml, ocaml, ocamldep, quiet, traverse }
/Users/anshgodha/.opam/4.09.0/bin/ocamldep.opt -modules card.ml > card.ml.depends # cached
# Target: card.cmo, tags: { package(ANSITerminal), package(Yojson), package(oUnit), byte, compile, extension:cmo, extension:ml, file:card.cmo, file:card.ml, implem, ocaml, quiet, traverse }
/Users/anshgodha/.opam/4.09.0/bin/ocamlc.opt -c -o card.cmo card.ml
+ /Users/anshgodha/.opam/4.09.0/bin/ocamlc.opt -c -o card.cmo card.ml
File "card.ml", line 1, characters 5-22:
1 | open Yojson.Basic.Util
         ^^^^^^^^^^^^^^^^^
Error: Unbound module Yojson
Command exited with code 2.
# Compilation unsuccessful.
